[fix] z-index static top menu

--- a/addons/theme_l/static/less/style.less
+++ b/addons/theme_l/static/less/style.less
@@ -43,7 +43,7 @@
     z-index:999;
 }
 .navbar-static-top{
-    z-index:998;
+    z-index:996;
 }
 #wrapwrap {
         top: 60px;
